Fixed z-index to insure that video-exchange-info-overlay is clickable when necessary

--- a/client/app/styles/_lx-video-elements.scss
+++ b/client/app/styles/_lx-video-elements.scss
@@ -58,7 +58,7 @@ $overlay-buttons-col-padding: 2px;
   position: absolute;
   font-size: 1.5em;
   padding: 0px $overlay-buttons-col-padding 0px $overlay-buttons-col-padding;
-  z-index: $video-wrapper-zindex + 3;
+  z-index: $video-wrapper-zindex + 6;
   opacity: 0.75;
 }
 
@@ -81,13 +81,13 @@ $overlay-buttons-col-padding: 2px;
   right: 0;
   background: black;
   text-align: center;
+  z-index: $video-wrapper-zindex + 4;
 }
 
 .cl-video-exchange-info-overlay-text {
   color: white;
   font-size: 1em;
   padding: 10px;
-  z-index: $video-wrapper-zindex + 2;
   opacity: 0.75;
 }
 
